fix for bug 243365 - Forked Java VM exited abnormally when running SDOXMLHelperLoadAndSaveTestSuite